Complete results with limit violations from DynaFlow  (#98)
* read constraints.xml and fill LimitViolation elements
* Read constraints from constraints folder
* getLimitViolation for all type of equipment/bus
* Clean security analysis unit test
* Remove reading powsybl-like sa output from dynawo
* Force limit violations in integration tests and check results
* Use ViolationLimitFilter
* LimitViolationDetector not used
* Add ConstraintsReader test and consecutive fixes

Signed-off-by: AIA_NT\demiguelm <demiguelm@aia.es>
Co-authored-by: Florian Dupuy <florian.dupuy@rte-france.com>